--- a/residentesdm/static/styles.css
+++ b/residentesdm/static/styles.css
@@ -7,6 +7,8 @@ header {
 
 header h1 {
     color: #fff;
+    font-family: nimbus-sans, sans-serif;
+    font-weight: 700;
     margin: 0;
     font-size: 2.5vw;
     /* Ajusta este valor según tus necesidades */
@@ -42,3 +44,28 @@ p {
     }
 }
 /* fin de los estilos de la cebecera */
+
+
+/* estilos de sedes.html */
+
+.titulosede {
+    color: #3D5DAA;
+    font-family: nimbus-sans, sans-serif;
+    font-weight: 700;
+    font-style: bold;
+}
+
+.lassedes .elformulario {
+    font-size: 1.5vw;
+    font-family: mr-eaves-sans, sans-serif;
+}
+
+.elformulario {
+    padding: 12px;
+    font-family: mr-eaves-sans, sans-serif;
+}
+
+/* estilos de sedes.html */
+
+
+
