--- a/residentesdm/templates/plantillas/base.html
+++ b/residentesdm/templates/plantillas/base.html
@@ -31,8 +31,8 @@
             <h1>Residencias Médicas<br>Diagnóstico Por Imágenes</h1>
         </div>
     </header>
-    <nav>
-        <ul class="nav nav-tabs justify-content-center">
+    <!-- <nav>
+        <ul class="nav nav-tabs justify-content-end m-3">
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'residentesdm:inicio' %}">Inicio</a>
             </li>
@@ -45,14 +45,28 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Administración</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'residentesdm:evaluacion' %}">Evaluación Residentes</a>
-            </li>
         </ul>
-    </nav>
-    <main class="container-fluid">
+    </nav> -->
+    <main class="container-fluid" style="min-height: calc(100vh - 60px);">
         {% block content %}
         {% endblock %}
     </main>
+    <footer class="text-end p-3" style="background-color: #F2F2F2;">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-3 text-md-start text-center mb-3 mb-md-0">
+                    <p class="mb-0">Dirección: Junin 1023 - Recoleta</p>
+                    <p class="mb-0">Teléfono: 4958-5555</p>
+                </div>
+                <div class="col-md-3">
+                </div>
+                <div class="col-md-6 text-md-end text-center">
+                    <p class="mb-0">Web creada por Dr. Enso F. Cejas</p>
+                    <p class="mb-0">Director del Departamento de Docencia e Investigación</p>
+                    <p class="mb-0">Residencia Médica en Diagnóstico por Imágenes - Diagnóstico Médico</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
