--- a/residentesdm/templates/agregar_residente.html
+++ b/residentesdm/templates/agregar_residente.html
@@ -14,16 +14,20 @@
         {% csrf_token %}
 
         {{ form.non_field_errors }}
-        {% for field in form %}
+        <div class="row">
+            {% for field in form %}
+            <div class="col-md-6">
 
-        <div>
+                <div>
 
-            {{ field.errors }}
-            {{ field.label_tag }}
-            {{ field }}
+                    {{ field.errors }}
+                    {{ field.label_tag }}
+                    {{ field }}
 
+                </div>
+            </div>
+            {% endfor %}
         </div>
-        {% endfor %}
 
         <button class="btn btn-primary mt-3" type="submit">Agregar</button>
     </form>
