--- a/residentesdm/templates/registration/register.html
+++ b/residentesdm/templates/registration/register.html
@@ -3,10 +3,12 @@
 {% block title %}Registro{% endblock %}
 
 {% block content %}
+<div class="container mb-3 mt-3">
     <h2>Registro de Médico Residente</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Registrar</button>
+        <button type="submit" class="btn btn-primary">Registrar</button>
     </form>
+</div>
 {% endblock %}
