--- a/residentesdm/templates/inicio.html
+++ b/residentesdm/templates/inicio.html
@@ -2,6 +2,35 @@
 {% load static %}
 {% block title %}Inicio{% endblock %}
 {% block content %}
+<div class="d-flex flex-column flex-md-row justify-content-between m-3">
+    <div class="d-flex align-items-center">
+        {% if user.is_authenticated %}
+        <p class="mb-0">Bienvenido, <strong>{{ user.username }}</strong>!</p>
+        {% else %}
+        <p class="mb-0">No has iniciado sesión.</p>
+        {% endif %}
+    </div>
+    <nav>
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'residentesdm:inicio' %}">Inicio</a>
+            </li>
+            <!-- <li class="nav-item">
+                <a class="nav-link" href="#">Residentes</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Tutores</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Administración</a>
+            </li> -->
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'residentesdm:logout' %}">Cerrar sesión</a>
+            </li>
+        </ul>
+    </nav>
+</div>
+
 <main>
     <div class="card mt-3">
         <div class="card-body text-justify">
