--- a/residentesdm/templates/registration/register.html
+++ b/residentesdm/templates/registration/register.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="container mb-3 mt-3">
-    <h2>Registro de Médico Residente</h2>
+    <h2>Registro</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
